# Fathom-to-Loom

./: .env  .env.example  .env.sample  .gitignore  ARCHITECTURE.md  BOOTSTRAP_SUMMARY.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  ENVIRONMENT_SETUP.md  Makefile  POCKETBASE_LIFECYCLE_MANAGER.md  README.md  STEP11_REAL_TIME_BROADCASTING_SUMMARY.md  STEP4_COMPLETION_SUMMARY.md  STEP6_COMPLETION_SUMMARY.md  WORKER_PROGRESS.md  docker-compose.yml  justfile  roadmap.md  test_env.sh  test_pocketbase_api.sh
.github/workflows/: ci.yml
backend/: API_IMPLEMENTATION.md  Cargo.toml
backend/src/: config.rs  lib.rs  main.rs  pocketbase_manager.rs
backend/src/api/: adapters.rs  auth.rs  extractors.rs  keys.rs  meetings.rs  mod.rs  pocketbase.rs  queue.rs  websocket.rs
common/: Cargo.toml
common/src/: broadcast.rs  crypto.rs  lib.rs
common/src/crypto/: examples.rs
docs/: SECURE_KEY_STORAGE.md
fathom_to_loom/: Cargo.toml
frontend/: Cargo.toml  Dioxus.toml  README.md  index.html  tailwind.config.js
frontend/src/: config.rs  main.rs
frontend/src/components/: auth.rs  common.rs  dashboard.rs  layout.rs  mod.rs
frontend/src/pages/: auth.rs  dashboard.rs  home.rs  mod.rs  recordings.rs  settings.rs
frontend/src/services/: api.rs  auth.rs  mod.rs  websocket.rs
frontend/src/utils/: date.rs  mod.rs  validation.rs
nginx/: frontend.conf
pb_migrations/: 1730000000_initial_schema.js  1730000000_initial_schema.js.bak  README.md
pocketbase/: pb_schema.json
smtp-service/: Cargo.toml
smtp-service/src/: main.rs
worker/: Cargo.toml
worker/src/: config.rs  error.rs  lib.rs  main.rs  queue.rs
