[workspace]
members = [
    "smtp-service",
    "frontend", 
    "fathom_to_loom", 
    "backend", 
    "worker", 
    "common",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# PocketBase integration (implement custom client)
# pb-rust-sdk = "0.1"  # Not available on crates.io

# Frontend framework
dioxus = "0.5"

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Environment variables
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
