[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
# pb-rust-sdk = { workspace = true }  # Not available, will implement custom client
aes-gcm = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies for PocketBase management
futures = "0.3"
tokio-tungstenite = "0.21"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
http = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Local workspace crates
common = { path = "../common" }
