[package]
name = "fathom-loom-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

# Dioxus
dioxus = "0.5"
dioxus-web = "0.5"
dioxus-router = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
gloo-net = "0.5"

# Utils
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
gloo-utils = "0.2"
gloo-storage = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
