[package]
name = "fathom-loom-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dioxus = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

# Dioxus packages
dioxus-web = "0.5"
dioxus-router = "0.5"
dioxus-liveview = "0.5"

# Web-specific HTTP client
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }

# WASM utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
gloo-utils = "0.2"
gloo-storage = "0.3"

# WebSocket support
ws_stream_wasm = "0.7"
futures = "0.3"

# UI utilities
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
regex = "1.0"

# WASM-specific logging
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# Local workspace crates
common = { path = "../common" }
