[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
# pb-rust-sdk = { workspace = true }  # Not available, will implement custom client
aes-gcm = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies for video processing and email
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls"] }
base64 = "0.21"
url = "2.4"
once_cell = "1.19"
tempfile = "3.8"
md5 = "0.7"
sha2 = "0.10"

# Local workspace crates
common = { path = "../common" }
